force-app/main/default/objects/MUSW__Violation__c/MUSW__Violation__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Violation cited on Complaints</description>
    <label>Violation</label>
    <nameField>
        <displayFormat>VI-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>