force-app/main/default/objects/MUSW__Violation__c/fields/Abatement_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Requirement__c</fullName>
    <label>Abatement Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>