force-app/main/default/objects/MUSW__Violation__c/fields/abd_Charge__c.field-meta.xml
<CustomField>
    <fullName>abd_Charge__c</fullName>
    <label>Charge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>