force-app/main/default/objects/MUSW__Violation__c/fields/abd_Citizenship_Lost__c.field-meta.xml
<CustomField>
    <fullName>abd_Citizenship_Lost__c</fullName>
    <label>Citizenship Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>