force-app/main/default/objects/MUSW__Violation__c/fields/abd_Date_of_Arrest__c.field-meta.xml
<CustomField>
    <fullName>abd_Date_of_Arrest__c</fullName>
    <label>Date of Arrest</label>
    <type>Date</type>
</CustomField>