force-app/main/default/objects/MUSW__Violation__c/fields/abd_Disposition_Outcome_of_Arrest__c.field-meta.xml
<CustomField>
    <fullName>abd_Disposition_Outcome_of_Arrest__c</fullName>
    <label>Disposition Outcome of Arrest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>