force-app/main/default/objects/MUSW__Violation__c/fields/abd_Location_of_Court__c.field-meta.xml
<CustomField>
    <fullName>abd_Location_of_Court__c</fullName>
    <label>Location of Court</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Test 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>