force-app/main/default/objects/MUSW__Violation__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Checklist</description>
    <label>Answer</label>
    <referenceTo>BGCK__Answer__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>