force-app/main/default/objects/MUSW__Violation__c/fields/Application2__c.field-meta.xml
<CustomField>
    <fullName>Application2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>