force-app/main/default/objects/MUSW__Violation__c/fields/Cited_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Cited_DateTime__c</fullName>
    <label>Cited Date</label>
    <type>DateTime</type>
</CustomField>