force-app/main/default/objects/MUSW__Violation__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>Case( MUSW__Status__c , 

"Closed - Corrected","Yes", 
"Closed - Administrative Decision","Yes", 




"No")</formula>
    <label>Closed</label>
    <type>Text</type>
</CustomField>