force-app/main/default/objects/MUSW__Violation__c/fields/License2__c.field-meta.xml
<CustomField>
    <fullName>License2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>