force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Citation_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Citation_Amount__c</fullName>
    <label>Citation Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>