force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Cited_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Cited_Date__c</fullName>
    <label>Cited Date</label>
    <type>Date</type>
</CustomField>