force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Comments_Long__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Comments_Long__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>