force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Complaint2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Violations</relationshipName>
    <type>Lookup</type>
</CustomField>