force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Compliance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Compliance_Due_Date__c</fullName>
    <label>Compliance Due Date</label>
    <type>Date</type>
</CustomField>