force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Dangerous__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Dangerous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous</label>
    <type>Checkbox</type>
</CustomField>