force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Days_Till_Due__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Days_Till_Due__c</fullName>
    <formula>IF( ISNULL( MUSW__Compliance_Due_Date__c ) , NULL, (MUSW__Compliance_Due_Date__c - TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Till Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>