force-app/main/default/objects/MUSW__Violation__c/fields/MUSW__Location__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Location__c</fullName>
    <label>Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>